--- a/layouts/map.html
+++ b/layouts/map.html
@@ -10,23 +10,23 @@
   <body class="with-custom-webkit-scrollbars with-custom-css-scrollbars" data-dm-shortcut-enabled="true" data-sidebar-shortcut-enabled="true" data-set-preferred-mode-onload="true">
 
     <div dcg-obj="navbar" dcg-json>
-      <div dcg-src="layouts/templates/navbar.json" dcg-spre></div>
+      <div dcg-src="layouts/templates/navbar.json"></div>
     </div>
 
     <div dcg-obj="sidebar" dcg-json>
-      <div dcg-src="layouts/templates/sidebar.json" dcg-spre></div>
+      <div dcg-src="layouts/templates/sidebar.json"></div>
     </div>
 
     <div dcg-obj="map" dcg-json>
-      <div dcg-src="map.json" dcg-spre></div>
+      <div dcg-src="map.json"></div>
     </div>
 
     <dcg dcg-temp="navbar" dcg-tref>
-      <dcg dcg-src="layouts/templates/navbar.html" dcg-spre></dcg>
+      <dcg dcg-src="layouts/templates/navbar.html"></dcg>
     </dcg>
 
     <dcg dcg-temp="sidebar" dcg-tref>
-      <dcg dcg-src="layouts/templates/sidebar.html" dcg-spre></dcg>
+      <dcg dcg-src="layouts/templates/sidebar.html"></dcg>
     </dcg>
 
     <dcg dcg-temp="card" dcg-tref>
@@ -39,11 +39,7 @@
       </div>
     </dcg>
 
-    <dcg dcg-temp="dashpage" dcg-tref>
-      <dcg dcg-src="layouts/templates/page.html" dcg-spre></dcg>
-    </dcg>
-
-    <dcg dcg-temp="dashpage" dcg-tobj="dash" dcg-tren></dcg>
+    <dcg dcg-src="layouts/templates/page.html"></dcg>
 
     <dcg dcg-obj="dash.content">
 
