--- a/layouts/templates/page.html
+++ b/layouts/templates/page.html
@@ -10,7 +10,7 @@
 
     <div class="content-wrapper">
         <div class="container-fluid">
-            {{content}}
+            {{dash.content}}
         </div>
     </div>
 
